# FlutterBye

./: .ebignore  .env.aws.template  .env.example  .env.local  .gitignore  .replit  100_PERCENT_PRODUCTION_READY.md  ADMIN_PANEL_CONSOLIDATION_COMPLETE.md  ADMIN_PANEL_REVIEW_AND_IMPROVEMENTS.md  ADMIN_SUBSCRIPTION_MANAGEMENT_COMPLETE.md  ADVANCED_ANALYTICS_DASHBOARD_2_0_COMPLETE.md  AI_COMPREHENSIVE_ANALYSIS_AND_IMPROVEMENT_RECOMMENDATIONS.md  AI_COMPREHENSIVE_SUMMARY.md  AI_COST_ANALYSIS.md  AI_REVOLUTIONARY_ENHANCEMENT_STRATEGY.md  AI_SEO_FIX_COMPLETE.md  AUDIO_BLOCKCHAIN_DEMO_SCRIPT.md  AWS_DEPLOYMENT_READY.md  AWS_MIGRATION_PLAN.md  BLOCKCHAIN_FUNCTIONALITY_COMPLETE.md  BUNDLE_1_CORE_INFRASTRUCTURE_COMPLETE.md  BUNDLE_2_AI_ENHANCEMENT_COMPLETE.md  BUNDLE_3_ADVANCED_ANALYTICS_COMPLETE.md  BUNDLE_4_AUTOMATION_AI_ORCHESTRATION_COMPLETE.md  BUNDLE_5_AUTOMATION_AI_ORCHESTRATION_COMPLETE.md  BUNDLE_5_COMPLETE_SYSTEM_INTEGRATION_SUCCESS.md  BURN_TO_REDEEM_SECURITY_GUIDE.md  CELESTIAL_PERSONALIZATION_COMPLETE.md  CHAT_ENHANCEMENT_COMPLETE.md  CHAT_MONETIZATION_STRATEGY.md  CHAT_UX_IMPROVEMENTS_ROADMAP.md  COIN_MINTING_LAUNCH_STRATEGY.md  COLOR_ALTERNATIVES_GUIDE.md  COMPREHENSIVE_BLOCKCHAIN_INFRASTRUCTURE_AUDIT.md  COMPREHENSIVE_DEVNET_DEPLOYMENT_ANALYSIS.md  COMPREHENSIVE_FLUTTERBLOG_SUCCESS_REPORT.md  COMPREHENSIVE_PLATFORM_UX_UI_ANALYSIS.md  COMPREHENSIVE_PRODUCTION_READINESS_ANALYSIS.md  COMPREHENSIVE_PRODUCTION_STATUS.md  COMPREHENSIVE_PRODUCT_TESTING_RESULTS.md  (+156 more)
.ebextensions/: nodecommand.config  (+2 more)
contracts/escrow/: Anchor.toml  Cargo.toml
contracts/escrow/src/: lib.rs
(+826 files in other folders)
